edition = "2023";

package wayplatform.connect.tachograph.card.v1;

import "google/protobuf/timestamp.proto";

// Represents the identification of the driver card holder.
//
// Corresponds to the `DriverCardHolderIdentification` data type.
// See Data Dictionary, Section 2.62.
message DriverCardHolderIdentification {
  // Corresponds to `holderSurname`.
  string card_holder_surname = 1;

  // Corresponds to `holderFirstNames`.
  string card_holder_first_names = 2;

  // See Data Dictionary, Section 2.62, `cardHolderBirthDate`.
  google.protobuf.Timestamp card_holder_birth_date = 3;

  // See Data Dictionary, Section 2.62, `cardHolderPreferredLanguage`.
  string card_holder_preferred_language = 4;
}
