edition = "2023";

package wayplatform.connect.tachograph.card.v1;

import "google/protobuf/timestamp.proto";
import "wayplatform/connect/tachograph/datadictionary/v1/event_fault_type.proto";

// Represents fault data from a tachograph card.
//
// Corresponds to the `CardFaultData` data type.
// See Data Dictionary, Section 2.21.
message FaultData {
  // Represents a single fault record.
  //
  // Corresponds to the `CardFaultRecord` data type.
  // See Data Dictionary, Section 2.22.
  message Record {
    // See Data Dictionary, Section 2.70 for `EventFaultType`.
    datadictionary.v1.EventFaultType fault_type = 1;
    // Populated only when fault_type is EVENT_FAULT_TYPE_UNRECOGNIZED.
    int32 unrecognized_fault_type = 2;

    // See Data Dictionary, Section 2.162 for `TimeReal`.
    google.protobuf.Timestamp fault_begin_time = 3;

    // See Data Dictionary, Section 2.162 for `TimeReal`.
    google.protobuf.Timestamp fault_end_time = 4;

    // Part of `VehicleRegistrationIdentification`. See DD Section 2.166.
    string vehicle_registration_nation = 5;

    // Part of `VehicleRegistrationIdentification`. See DD Section 2.166.
    string vehicle_registration_number = 6;
  }

  repeated Record records = 1;
}
